# ml.datasets

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.cfg
docs/: .buildinfo  datasets.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: datasets.doctree  environment.pickle  index.doctree
docs/_modules/: index.html
docs/_modules/tno/quantum/ml/datasets/: _datasets.html
docs/_sources/: datasets.rst.txt  index.rst.txt
src/tno/quantum/ml/datasets/: __init__.py  _datasets.py
src/tno/quantum/ml/datasets/test/: test_datasets.py
tno/quantum/ml/datasets/: __init__.py  _datasets.py
tno/quantum/ml/datasets/test/: test_datasets.py
