[metadata]
name = tno.quantum.ml.datasets
author = TNO Quantum
author_email = quantumcodelab@tno.nl
maintainer = TNO Quantum
maintainer_email = quantumcodelab@tno.nl
description = Machine Learning Datasets module
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    Quantum
url = https://tno.nl
download_url = https://pypi.org/project/tno.quantum.ml.datasets/#files
project_urls =
    Documentation = https://tno-quantum.github.io/ml.datasets/
    Source Code = https://github.com/TNO-Quantum/ml.datasets
version = attr: tno.quantum.ml.datasets.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.quantum.ml.datasets
    tno.quantum.ml.datasets.test
zip_safe = False
install_requires =
    scikit-learn>=1.0.2
    numpy>=1.21.6
namespace_packages =
    tno
    tno.quantum
    tno.quantum.ml
include_package_data = True

[options.package_data]
tno.quantum.ml.datasets = py.typed

[options.extras_require]
tests =
    pytest~=7.2.0
    pytest-cov~=4.0.0
dev =
    black~=22.10.0
	isort~=5.10.1
    mypy~=0.982
    pylint~=2.15.5
    sphinx~=5.3.0
    sphinx-autodoc-typehints~=1.19.5
    sphinx-math-dollar~=1.2.1
    sphinx-rtd-theme~=1.0
